demo.hello/k8s/webhook/deploy/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-webhook-app-deployment
  namespace: k8s-test
  labels:
    app: admission-webhook-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-webhook-app
  template:
    metadata:
      labels:
        app: admission-webhook-app
    spec:
      containers:
        - name: admission-webhook-app
          image: zhengjin.k8s.test/admission-webhook-app:v1.0.1
          imagePullPolicy: IfNotPresent
          args:
            - -sidecarCfgFile=/etc/webhook/config/sidecarconfig.yaml
            - -tlsCertFile=/etc/webhook/certs/cert.pem
            - -tlsKeyFile=/etc/webhook/certs/key.pem
            - -alsologtostderr
            - -v=4
            - 2>&1
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
            - name: webhook-config
              mountPath: /etc/webhook/config
      volumes:
        - name: webhook-certs
          secret:
            secretName: admission-webhook-app-certs
        - name: webhook-config
          configMap:
            name: sidecar-injector-webhook-configmap
