demo.hello/k8s/webhook/deploy/injectorwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sidecar-injector-webhook-app-cfg
  labels:
    app: sidecar-injector-app
webhooks:
  - name: sidecar-injector.test.com
    sideEffects: "None"
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        name: admission-webhook-app-svc
        namespace: k8s-test
        path: "/inject"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRJd01Ea3lNekF6TVRneU0xb1hEVE13TURreU1qQXpNVGd5TTFvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT1hICmlGdW9VY2kvMFZUUS9vdUNpYW9nUjhBdHdiZUV3d2pQbWJhSHRiSWhGN1Frb3Rmc1VtNUhjbzhsUHJrb0NPTEQKR3JVZWZsU1VMMEI0Wm9aUkhDanB4U0NzSzBueVdqQU1aSTNBdkxYM2VQV2puVE1jYTZBbjAraDBKVnBiZXNnTQp5RHFKcFlIOVpH [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1", "v1beta1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        admission-webhook-app: enabled
